exports[`StorageUnitModalReducer LOAD_CHILDREN: fail action 1`] = `
Object {
  "error": [Error: LOAD_CHILDREN has error.],
  "loaded": false,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer LOAD_CHILDREN: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer LOAD_CHILDREN: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer LOAD_NODE: fail action 1`] = `
Object {
  "root": Object {
    "data": Object {},
    "error": [Error: LOAD_ROOT: has error.],
    "loaded": false,
    "loading": false
  }
}
`;

exports[`StorageUnitModalReducer LOAD_NODE: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer LOAD_NODE: success action 1`] = `
Object {
  "root": Object {
    "data": Object {
      "breadcrumb": Array [],
      "someField": 1
    },
    "loaded": true,
    "loading": false
  }
}
`;

exports[`StorageUnitModalReducer Reducer: no action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer Reducer: nothing at all 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitModalReducer creates LOAD_CHILDREN_SUCCESS child when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_CHILDREN"
  },
  Object {
    "result": Array [
      Object {
        "id": 3,
        "isPartOf": 2,
        "name": "Forskningens hus",
        "path": ",1,2,3,",
        "type": "Building",
        "updatedBy": 123,
        "updatedDate": "2016-01-01T00:00:00+00:00"
      }
    ],
    "type": "musit/storageunit-modal/LOAD_CHILDREN_SUCCESS"
  }
]
`;

exports[`StorageUnitModalReducer creates LOAD_ROOT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_NODE"
  },
  Object {
    "result": Object {
      "id": 2,
      "isPartOf": 1,
      "name": "Utviklingsmuseet",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "type": "Organisation",
      "updatedBy": 123,
      "updatedDate": "2016-01-01T00:00:00+00:00"
    },
    "type": "musit/storageunit-modal/LOAD_NODE_SUCCESS"
  }
]
`;

exports[`StorageUnitModalReducer creates LOAD_SEVERAL_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_NODE"
  },
  Object {
    "result": Array [
      Object {
        "id": 3,
        "isPartOf": 2,
        "name": "Forskningens hus",
        "path": ",1,2,3,",
        "type": "Building",
        "updatedBy": 123,
        "updatedDate": "2016-01-01T00:00:00+00:00"
      }
    ],
    "type": "musit/storageunit-modal/LOAD_NODE_SUCCESS"
  }
]
`;
